메인 환경 수정 - 메인 화면 정리 - AccessInfo Class 추가 - 버튼 클릭시 접속 정보(IP,OS,Device,Browser)가 보여지도록 연결 - 로깅 기본 설정(info)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,16 @@
+#?? ??
 spring:
   application:
     name: CloudKVTest
+
+#Thymeleaf ??
 thymeleaf:
   prefix=classpath: templates/
   suffix: .html
   check-template-location: true
   cache: false
+
+#logging ??
+logging:
+  level:
+    root: info
